--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
   "bugs": {
     "url": "https://github.com/xxj95719/evenBus/issues"
   },
-  "homepage": "https://github.com/xxj95719/evenBus#readme"
+  "homepage": "https://github.com/xxj95719/evenBus#readme",
+  "keywords": [
+    "evenbus",
+    "evenBus",
+    "events"
+  ]
 }
