--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "evenbus",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "Event bus js library based on publish/subscribe mode.",
-  "main": "./bundle.js",
+  "main": "dist/index.js",
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/plugin-proposal-class-properties": "^7.3.4",
@@ -10,7 +10,8 @@
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015-rollup": "^3.0.0",
     "rollup": "^1.4.1",
-    "rollup-plugin-babel": "^4.3.2"
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-uglify": "^6.0.2"
   },
   "scripts": {
     "build": "rollup -c",
